# Shoply

./: .gitignore  .swift-version  ANALYSE_BESOINS_MAQUETTAGE.md  ANALYSE_COMPLETE_CONFORMITE.md  ANALYSE_COMPLETE_RNCP37873.md  ANALYSE_FINALE_RNCP37873.md  ANALYSE_RNCP37873.md  APPLE_SIGN_IN_COMPTE_GRATUIT.md  CONFIGURATION_ANDROID_TERMINEE.md  CONFORMITE_RNCP37873.md  CORRIGER_ERREUR_APPLE_SIGN_IN.md  DEBUG_APPLE_SIGN_IN.md  DIAGNOSTIC_APP_GROUP.md  DOCUMENTATION_DEPLOIEMENT.md  DOCUMENTATION_TECHNIQUE.md  DOSSIER_PROJET.md  GUIDE_APPLE_SIGN_IN.md  GUIDE_CONFIGURATION_APPLE_SIGN_IN.md  GUIDE_ICONES_APP.md  GUIDE_PORTAGE_ANDROID.md  INSTRUCTIONS_APPLE_SIGN_IN_MANUAL.md  INSTRUCTIONS_XCODE_CAPABILITIES.md  PLAN_TESTS.md  README.md  SETUP_ANDROID_SWIFT.md  SETUP_PYTHON_AI.md
Shoply/: AppDelegate.swift  ContentView.swift  Shoply.entitlements  ShoplyApp.swift
Shoply.xcodeproj/: project.pbxproj
ShoplyAndroid/: 100_POURCENT_SWIFT.md  COMPILATION_REUSSIE.md  COPIER_TOUS_ECRANS_IOS.md  DEMARRAGE_RAPIDE.md  GUIDE_LANCER_SUR_EMULATEUR.md  LANCER_APP.md  LANCER_L_APP.md  LANCER_MAINTENANT.md  QUICK_START_EMULATEUR.md  README.md  RESUME_CREATION.md  RESUME_MINIMUM_KOTLIN.md  RESUME_SWIFT_PORTAGE.md  STATUT_FINAL.md  STATUT_LANCEMENT.md  STRUCTURE_100_SWIFT.md  SWIFT_ONLY_GUIDE.md  USER_SWIFT_SUR_ANDROID.md  build.gradle  gradle.properties  gradlew  lancer.sh  local.properties  quick-start.sh  settings.gradle
ShoplyAndroid/app/src/main/cpp/: CMakeLists.txt
ShoplyRN/: ANDROID_ONE_UI_7.md  App.tsx  MIGRATION_STATUS.md  README.md  app.json  package-lock.json  package.json
(+287 files in other folders)
